# cpp_new

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/core/: CMakeLists.txt  core_lib.cpp
src/include/core/: core_lib.h
src/server/: CMakeLists.txt  main.cpp
